--- a/style.css
+++ b/style.css
@@ -51,3 +51,11 @@ body {
     height: 2px;
     bottom: 0;
 }
+
+/* Footer */
+footer {
+    background-color: #40474e;
+    color: white;
+    padding: 2rem 0 2rem;
+    margin-top: 1rem;
+}
