--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
+@import "bootstrap/css/bootstrap.min.css";
 
 body {
     overflow-x: hidden;
@@ -6,20 +7,11 @@ body {
     color: #505962;
 }
 
-@mixin clearfix { 
-	*zoom:1;
-    &:before, &:after { 
-		content: ""; 
-		display: table; 
-	}
-    &:after { 
-		clear: both; 
-	}
-}
-
-
-
 /* Navigation */
+.navbar {
+    letter-spacing: .1rem;
+    background: rgba(0,0,0,0.6) !important;
+}
 
 /* Landing Page */
 .home-inner {
@@ -70,5 +62,36 @@ footer {
     background-color: #40474e;
     color: white;
     padding: 2rem 0 2rem;
-    margin-top: 1rem;
+	margin-top: 1rem;
+	text-align: center
+}
+
+.link-footer a {
+	text-decoration: none;
+	color:  rgba(255,255,255,.5);
+}
+
+.link-footer a:hover {
+	text-decoration: none;
+	color:  rgba(255, 255, 255, 0.705);
+}
+
+footer hr.socket {
+	width: 100%;
+	border: 0.05rem solid rgba(255,255,255);
+}
+footer .svg-inline--fa {
+	color:  white;
+	font-size: 2rem;
+	word-spacing: 2rem;
+	
+}
+
+footer .svg-inline--fa.fa-w-14 {
+    width: 3rem;
+}
+
+footer .footer-icon {
+	width: 100%;
+	font-size: 3rem;
 }
