--- a/style.css
+++ b/style.css
@@ -91,7 +91,13 @@ footer .svg-inline--fa.fa-w-14 {
     width: 3rem;
 }
 
-footer .footer-icon {
-	width: 100%;
-	font-size: 3rem;
+
+/* Media Query */
+@media (max-width: 576px) {
+
+@media (max-width: 992px) {
+	
+}
+
+@media (min-width: 993px) {
 }
