--- a/style.css
+++ b/style.css
@@ -94,10 +94,13 @@ footer .svg-inline--fa.fa-w-14 {
 
 /* Media Query */
 @media (max-width: 576px) {
+	
+}
 
 @media (max-width: 992px) {
 	
 }
 
 @media (min-width: 993px) {
+
 }
