--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
 @import "bootstrap/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
 
 body {
     overflow-x: hidden;
@@ -13,9 +14,17 @@ body {
     background: rgba(0,0,0,0.6) !important;
 }
 
-/* Landing Page */
-.home-inner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/me.jpg);
+/* Carousel Page */
+.h-100vh {
+    height:100vh;
+    object-fit: cover;
+} 
+
+.carousel-inner {
+    background-size: fill;
+    background-position: 50% 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .caption {
