--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ footer .svg-inline--fa.fa-w-14 {
 	.caption {
         top: 15%;
     }
+    footer p {
+		font-size: 0.8rem;
+	}
 }
 
 @media (max-width: 992px) {
